--- a/Projects/03-CSF2/_2Tuesday/CSF2/DungeonApplication/DungeonApplication.csproj
+++ b/Projects/03-CSF2/_2Tuesday/CSF2/DungeonApplication/DungeonApplication.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6C427F78-E9AC-496F-A4E4-F413F70D7D13}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>DungeonApplication</RootNamespace>
     <AssemblyName>DungeonApplication</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
